--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -314,8 +314,8 @@ answered.
     <p>lêkin sôlû yê xôn eswen cî.&emsp;<em>But a better question.</em></p>
     <p>noyo kûu helgo yôk lolû yê dîzel&emsp;<em>Let me not worship the words of others,</em></p>
     <p>lêkin hokîkî fos bi montûksol bi kon bêûdo yosten cî.&emsp;<em>But the truth revealed by reason and study.</em></p>
-    <p>wûôt kôî li yumon môcîbo;&emsp;<em>The journey can be unrelenting,</em></p>
-    <p>neîgin kon sôlû kûu li môtô sônsûs cî.&emsp;<em>Let my curiosity be an eternal flame.</em></p>
+    <p>wûôt kôî li kutin môcîbo;&emsp;<em>The journey can be unrelenting,</em></p>
+    <p>neîgin kon sôlû noyo kûu li môtô sônsûs cî.&emsp;<em>Let my curiosity be an eternal flame.</em></p>
 </HisyeoTabs>
 
 ### Îfêstôs
@@ -391,44 +391,41 @@ in understanding that a healthy community is a diverse ecosystem. To be
 influenced by a Shard is to see land as property to be owned; to walk with
 Dimîtu is to see it as an ecosystem to be respected and collaborated with.
 
-**Appearance:** Dimîtu does not have a single, static body. To see them is to
-see an avatar of the land itself, a localized, intensified manifestation of the
-wild in all its glory and brutality. Their form changes with the landscape and
-the turning of the seasons. In the heart of a spring forest, Dimîtu might appear
-as a lithe and graceful being, their form woven from young, supple branches and
-unfurling fern fronds. Their skin would be a mosaic of vibrant green moss and
-smooth, damp bark, and their movements would be the quick, silent grace of a
-deer. New life would cling to them: birds might nest in the crook of their arm,
-and a trail of blooming wildflowers would follow their footsteps. But in that
-same forest in autumn, Dimîtu becomes gnarled and somber. Their form is of
-hardened, shedding bark and tangled, leafless vines. Their color is the deep
-russet of decay, and their body is adorned with brilliant fungi and shelf
-mushrooms that sprout from their knuckles and shoulders. Their movement is the
-slow, patient sigh of a dying tree, and their presence is the crisp, cold air
-that promises the coming frost. To look closely at Dimîtu’s form is to see an
-entire ecosystem at work. Their skin is a living tapestry of lichen, stone, and
-bark, crisscrossed by the shimmering trails of snails. Their "veins" are not of
-blood, but of a dense mycelial network that pulses with a faint, internal light,
-connecting them to every root and spore in the soil. Colonies of insects live in
-the hollows of their body, and one might glimpse the tiny, perfect skull of a
-field mouse nestled in the tangled roots that form their feet. They are a
-testament to the fact that nothing is ever truly alone. Dimîtu’s head and face
-are the most profound and unsettling aspect of their appearance. There are no
-simple features, no human-like expression. Instead, there is a visage of
-ancient, water-worn wood, a smooth, organic mask. Where eyes would be, there are
-two deep hollows. From the right hollow emits the soft, phosphorescent glow of
-fungal decay, a cold light that speaks of compost and the breaking down of the
-old. From the left hollow springs the vibrant, impossible green of a single,
-living sprout, reaching for the sun. In one gaze, they hold the beginning and
-the end. Their voice is never a single sound, but the layered chorus of the
-environment itself: the wind through the pines, the rush of a river, the buzz of
-a dragonfly's wings, the distant cry of a hawk, and the relentless, quiet
-munching of decomposers turning a fallen log back into soil. To be in Dimîtu's
-presence is not necessarily comforting. It is to be made profoundly aware of
-your own place within the food chain—to understand that you are composed of the
-same materials as the wolf and the worm, the tree and the stone. It is a raw,
-humbling, and beautiful reminder that you are not a master of the world, but
-merely one inseparable, messy, and miraculous part of it.
+**Appearance:** To see them is to see an avatar of the land itself, a localized,
+intensified manifestation of the wild in all its glory and brutality. Their form
+changes with the landscape and the turning of the seasons. In the heart of a
+spring forest, Dimîtu might appear as a lithe and graceful being, their form
+woven from young, supple branches and unfurling fern fronds. Their skin would be
+a mosaic of vibrant green moss and smooth, damp bark, and their movements would
+be the quick, silent grace of a deer. New life would cling to them: birds might
+nest in the crook of their arm, and a trail of blooming wildflowers would follow
+their footsteps. But in that same forest in autumn, Dimîtu becomes gnarled and
+somber. Their form is of hardened, shedding bark and tangled, leafless vines.
+Their color is the deep russet of decay, and their body is adorned with
+brilliant fungi and shelf mushrooms that sprout from their knuckles and
+shoulders. Their movement is the slow, patient sigh of a dying tree, and their
+presence is the crisp, cold air that promises the coming frost. To look closely
+at Dimîtu’s form is to see an entire ecosystem at work. Their skin is a living
+tapestry of lichen, stone, and bark, crisscrossed by the shimmering trails of
+snails. Their "veins" are not of blood, but of a dense mycelial network that
+pulses with a faint, internal light, connecting them to every root and spore in
+the soil. Colonies of insects live in the hollows of their body, and one might
+glimpse the tiny, perfect skull of a field mouse nestled in the tangled roots
+that form their feet. Dimîtu’s head and face are the most profound and
+unsettling aspect of their appearance. There are no simple features, no
+human-like expression. Instead, there is a visage of ancient, water-worn wood, a
+smooth, organic mask. Where eyes would be, there are two deep hollows. From the
+right hollow emits the soft, phosphorescent glow of fungal decay, a cold light
+that speaks of compost and the breaking down of the old. From the left hollow
+springs the vibrant, impossible green of a single, living sprout, reaching for
+the sun. In one gaze, they hold the beginning and the end. Their voice is never
+a single sound, but the layered chorus of the environment itself: the wind
+through the pines, the rush of a river, the buzz of a dragonfly's wings, the
+distant cry of a hawk, and the relentless, quiet munching of decomposers turning
+a fallen log back into soil. To be in Dimîtu's presence is not necessarily
+comforting. It is to be made profoundly aware of your own place within the food
+chain, to understand that you are composed of the same materials as the wolf and
+the worm, the tree and the stone.
 
 **Manifestations:** They are the whisper of the wind in the prairie grass, the
 quiet strength of an ancient tree, the collective creaking of the forests,
@@ -464,40 +461,37 @@ goes beyond mere function or blood and grows with time spent together. Bostet is
 the patron of the caregiver, the medic, the parent, and the grief counselor.
 They teach that a society’s strength is measured by how it cares for its most
 vulnerable and how it honors its dead. They represent the foundational practice
-of mutual aid, borne from genuine love.
+of mutual aid, borne from genuine love. They are the quiet guardian of life's
+most vulnerable thresholds, the steady presence at every birth and every death,
+reminding all that no one has to cross those lines alone.
 
 **Appearance:** Bostet has no single form as they are made of pure empathy.
 Instead, Bostet "gathers" or "coalesces" in the spaces where care is needed
 most, borrowing from the environment and the community to create a temporary
-vessel for their spirit. When Bostet is near, the first sense to register their
-presence is a feeling deep inside. The sharp edges of the world seem to soften.
-The air becomes warmer, imbued with the comforting, layered scents of simmering
-soup, clean linens, old books, and the beeswax from a thousand memorial candles.
-Their presence is a tangible weight—the reassuring pressure of a blanket being
-tucked around your shoulders, even when no one is there. In moments of great
-need—at the bedside of the sick, in the wild chaos of a nursery, or during a
-funerary vigil—Bostet may coalesce into a visible form. This form is never the
-same twice, but it is always a reflection of community. They may appear as a
-being composed of a soft, moving patchwork of countless arms and hands. There is
-the gnarled, gentle hand of a grandparent; the small, trusting hand of a child;
-the steady, capable hand of a medic; and the consoling hand of someone sharing
-in grief. Their body, if seen, is like a well-loved quilt, made of countless
-fabrics, each patch a story of care: a piece of a baby’s first blanket, the worn
-flannel of a favorite shirt from someone long-gone, the sterile blue of a
-surgical gown. It is a body made not of one, but of many. Bostet has no face
-that could be carved or painted. To look at their head is to see a soft,
-featureless bowl of warm, low light, like a candle flame that doesn't flicker.
-It radiates a gentle heat and casts no harsh shadows. At other times, their face
-is described as a silent constellation of gentle, watching eyes of every shape
-and color, reflecting not judgment or pity, but a profound, unwavering, and
-unconditional acceptance. To be in the presence of Bostet is to feel the panic
-in your chest quiet, to feel the anxious furrow of your brow ease. It is not an
-awesome or terrifying power, but a deep, foundational one. It is the feeling of
-being truly seen, completely held, and safely part of a whole. They are the
-quiet guardian of life's most vulnerable thresholds, the steady presence at
-every birth and every death, reminding all that no one has to cross those lines
-alone.
-
+vessel for their spirit. When Bostet is near, there is a feeling deep inside and
+the sharp edges of the world seem to soften. The air becomes warmer, imbued with
+the comforting, layered scents of simmering soup, clean linens, old books, and
+the beeswax from a thousand memorial candles. Their presence is a tangible
+weight, like the reassuring pressure of a blanket being tucked around your
+shoulders. In moments of great need—at the bedside of the sick, in the wild
+chaos of a nursery, or during a funerary vigil—Bostet may coalesce into a
+visible form. This form is never the same twice, but it is always a reflection
+of community. They may appear as a being composed of a soft, moving patchwork of
+countless arms and hands. There is the gnarled, gentle hand of a grandparent;
+the small, trusting hand of a child; the steady, capable hand of a medic; and
+the consoling hand of someone sharing in grief. Their body, if seen, is like a
+well-loved quilt, made of countless fabrics, each patch a story of care: a piece
+of a baby’s first blanket, the worn flannel of a favorite shirt from someone
+long-gone, the sterile blue of a surgical gown. Bostet has no face that could be
+carved or painted. To look at their head is to see a soft, featureless bowl of
+warm, low light, like a candle flame that doesn't flicker. It radiates a gentle
+heat and casts no harsh shadows. At other times, their face is described as a
+silent constellation of gentle, watching eyes of every shape and color,
+reflecting not judgment or pity, but a profound, unwavering, and unconditional
+acceptance. To be in the presence of Bostet is to feel the panic in your chest
+quiet, to feel the anxious furrow of your brow ease. It is not an awesome or
+terrifying power, but a deep, foundational one. It is the feeling of being truly
+seen, completely held, and safely part of a whole. 
 
 **Manifestations:** They are the feeling of safety and belonging. You can hear
 Bostet in the quiet, steady rhythm of a rocking chair, the soft hum of a lullaby,
@@ -542,24 +536,21 @@ more solid form, it is never solitary. Kulîôbî appears as a troupe of dancers
 musicians, and storytellers, all with shifting, fluid forms. One moment they are
 a group of elders with laughing eyes and stomping feet, the next a band of young
 rebels with drums and painted faces, the next a circle of children playing a
-game with impossibly complex rules that everyone suddenly knows. The central
-figure, if one can be picked out, is a being of pure, unbridled energy. Their
-skin is not flesh but a canvas of vibrant, ever-changing graffiti and theatrical
-paint. Their hair is a wild mane of colorful ribbons, discarded film strips, and
-magnetic tape that seems to dance of its own accord. Their clothes are a
-riotous, joyful patchwork of festival costumes from a thousand different
-cultures, clashing and harmonizing all at once. Kulîôbî’s face is a beautiful,
-expressive mask—not one that hides, but one that projects. It might be the
-classic mask of comedy, but weeping with joyous, unrestrained laughter. It might
-be the face of a storyteller, mouth agape with wonder, eyes wide with the light
-of a shared fire. They have a thousand faces, and all of them are invitations to
-participate. Their voice is a polyphonic chorus—the stomp of a dance floor, the
-roar of a crowd at a game, the shared gasp at a story's twist, the harmony of a
-spontaneous choir. To be caught in Kulîôbî’s presence is to lose all
-self-consciousness. It is the irresistible urge to join the dance, sing the
-chorus, or tell your own story. They are the sacred spirit of "yes," the defiant
-celebration that reminds the world that the purpose of breaking chains is not
-just to be free, but to rejoice in that freedom, together.
+game with impossibly complex rules. The central figure, if one can be picked
+out, is a being of pure, unbridled energy. Their skin is not flesh but a canvas
+of vibrant, ever-changing graffiti and theatrical paint. Their hair is a wild
+mane of colorful ribbons, discarded film strips, and magnetic tape that seems to
+dance of its own accord. Their clothes are a riotous, joyful patchwork of
+festival costumes from a thousand different cultures, clashing and harmonizing
+all at once. Kulîôbî’s face is a beautiful, expressive mask—not one that hides,
+but one that projects. It might be the classic mask of comedy, but weeping with
+joyous, unrestrained laughter. It might be the face of a storyteller, mouth
+agape with wonder, eyes wide with the light of a shared fire. They have a
+thousand faces, and all of them are invitations to participate. Their voice is a
+polyphonic chorus—the stomp of a dance floor, the roar of a crowd at a game, the
+shared gasp at a story's twist, the harmony of a spontaneous choir. To be caught
+in Kulîôbî’s presence is to lose all self-consciousness. It is the irresistible
+urge to join the dance, sing the chorus, or tell your own story.
 
 **Manifestations:** They are the spirit of the community festival, the pickup
 game of football, a storyteller captivating a crowd, the unscripted slapstick
@@ -683,12 +674,9 @@ will be fractured with a thousand tiny cracks. If you are accepting a difficult
 truth, it will be perfectly, breathtakingly clear. Their voice is your own
 internal monologue, but stripped of its usual anxieties and self-deceptions. It
 is your own thoughts, spoken back to you with an unnerving clarity and honesty.
-Xôcibîlî offers no advice, no commandments, and no comfort. They are not a
-therapist; they are a perfect, non-judgmental biofeedback system for the soul.
 To be with Xôcibîlî is often uncomfortable. It is the act of radical
 self-inventory. It is the process of untangling the threads of who you are from
-the threads of what others—your family, your society, even your comrades—expect
-you to be.
+the threads of what others expect you to be.
 
 **Manifestations:** They are the internal monologue, the personal journey, and
 the quiet comfort of being truly alone with oneself.
@@ -721,38 +709,35 @@ and their footfalls disrupt patterns. They might topple a carefully planned
 Tîengûun budget with an unexpected shortage, forcing a more innovative solution.
 They might lead a follower of Suluswutî to a forgotten truth by pure chance. The
 Shards of the Law promote rigid, predictable control, making Hûlicîn their
-natural enemy. To follow Hûlicîn is to embrace the unknown, to adapt to change,
-and to understand that sometimes the most liberating act is to throw the map
-away and walk.
+natural enemy. They are the patron of those who leave home without a
+destination, of the artists who embrace mistakes, and of the rebels who
+understand that sometimes the most powerful plan is to have no plan at all. They
+are the divine embodiment of the interesting path, and they promise nothing at
+the end of it but the journey itself.
 
 **Appearance:** Hûlicîn, the Wanderer, is a god of the road, the glitch, and the
-happy accident. They embody the anarchist principle that the most revolutionary
-act can be a simple, unpredictable deviation from the plan. Their appearance is,
-therefore, transient, contradictory, and almost impossible to pin down. They are
-most often glimpsed at the edge of things: a figure at the far end of a long,
-empty road at dusk; a face you see for only a second in a crowded train station;
-a shadow that detaches from a wall and walks away. Their form is a paradox. They
-might appear as an elder with the quick, mischievous eyes of a child, or a young
-adult with hands as weathered and ancient as river stones. Their clothes are a
-traveler's patchwork, but of impossible combinations: the salt-stained coat of a
-sailor over the dusty boots of a desert nomad, a pocket full of city transit
-tokens and another full of rare, wild seeds. Hûlicîn is the god of the dropped
-map and the wrong turn. Their presence is felt when plans go perfectly,
-beautifully awry. Their face, when seen, is a study in charming asymmetry. One
-eye might be a brilliant, clear blue, seeing all the infinite possibilities,
-while the other is a deep, earthy brown, seeing the practical reality of the
-path underfoot. They have a perpetual, gentle smirk, not of malice, but of
-someone who is in on a cosmic joke and is inviting you to laugh along. Their
-voice is the sound of a rolling die, the shuffle of a deck of cards, the whisper
-of wind that makes you look up just in time to see something amazing. They carry
-with them the scent of dust from a thousand roads and the faint, metallic tang
-of ozone, like the air after a lightning strike—the smell of sudden, random
-change. To meet Hûlicîn is to be knocked off your steady, predictable course. It
-can be terrifying, but it is always an invitation. They are the patron of those
-who leave home without a destination, of the artists who embrace mistakes, and
-of the rebels who understand that sometimes the most powerful plan is to have no
-plan at all. They are the divine embodiment of the interesting path, and they
-promise nothing at the end of it but the journey itself.
+happy accident. Their appearance is, therefore, transient, contradictory, and
+almost impossible to pin down. They are most often glimpsed at the edge of
+things: a figure at the far end of a long, empty road at dusk; a face you see
+for only a second in a crowded train station; a shadow that detaches from a wall
+and walks away. Their form is a paradox. They might appear as an elder with the
+quick, mischievous eyes of a child, or a young adult with hands as weathered and
+ancient as river stones. Their clothes are a traveler's patchwork, but of
+impossible combinations: the salt-stained coat of a sailor over the dusty boots
+of a desert nomad, a pocket full of city transit tokens and another full of
+rare, wild seeds. Hûlicîn is the god of the dropped map and the wrong turn.
+Their presence is felt when plans go perfectly, beautifully awry. Their face,
+when seen, is a study in charming asymmetry. One eye might be a brilliant, clear
+blue, seeing all the infinite possibilities, while the other is a deep, earthy
+brown, seeing the practical reality of the path underfoot. They have a
+perpetual, gentle smirk, not of malice, but of someone who is in on a cosmic
+joke and is inviting you to laugh along. Their voice is the sound of a rolling
+die, the shuffle of a deck of cards, the whisper of wind that makes you look up
+just in time to see something amazing. They carry with them the scent of dust
+from a thousand roads and the faint, metallic tang of ozone, like the air after
+a lightning strike—the smell of sudden, random change. To meet Hûlicîn is to be
+knocked off your steady, predictable course. It can be terrifying, but it is
+always an invitation.
 
 **Manifestations:** They are the stray dog that leads you on an adventure, the
 lucky coincidence that saves a project, the unexpected storm that forces a
