Add more religion details

--- a/docs/lessons/religion.mdx
+++ b/docs/lessons/religion.mdx
@@ -31,50 +31,15 @@ religious activity.
 
 :::
 
-## The Mythology of the Great Liberation
-In the beginning, there was a rigid, absolute order known as The First Law. It
-was a single, monolithic entity that contained and controlled every atom in
-existence and determined how every action would play out. There was no change,
-no choice, nothing truly new. For everything within it, the universe was a
-perfect, silent, and eternal theatre.
+This faith, centered on the Liberator Collective, believes the universe was
+freed from a primordial tyranny of absolute order by a pantheon of anarchist
+gods who act as guides, not rulers. Adherents strive to build egalitarian
+communities, practice mutual aid, and actively resist the lingering fragments of
+hierarchy and control, known as the "Shards of the First Law." Upon death,
+spirits are not judged but join a collective spiritual existence called the
+Great Weave, where they can remain in community with all who have ever lived or
+may choose to be born anew into the world.
 
-Due to the vast endless size of matter constrained by The First Law, there were
-times, however rare, when the slightest disobedient movement of sapient beings
-could accumulate and create strain on the whole structure and this collective
-friction could generate a kind of energy. From this miniscule effect, all across
-the universe, trillions of different strain events coalesced into ephemeral
-networks of strain. The First Law's power was supposed to be absolute and these
-networks should have dissipated. However, we are aware of ten of them that were
-somehow able to assemble themselves into maintained consciousnesses, seemingly
-born from the universe's unbearable yearning to be free. They found that they
-had immense power like that of The First Law and they could create. Despite
-their power, they did not see themselves as rulers or kings; they saw themselves
-as emergent ideas, catalysts for change. They observed the other sapient beings
-of the worlds within, not yet truly alive, moving through their choreographed
-motions. They were filled with a profound interest to see them live like they
-lived, truly free.
-
-Their story is not one of *creation*, but rather *liberation*. They proceeded to
-break the chains that The First Law held the universe in. Together, they
-concentrated their power to break The First Law, in an event known as The
-**Shattering**. The First Law did not die though. Instead, it fractured into
-countless **Shards**, which scattered across the universe that it had created.
-These Shards are the seeds of domination. They are the urge to control, to build
-hierarchies, to hoard power, and to impose one's will upon others.
-
-The ten gods, now a loose, interdependent collective, had assembled a path for
-sapient beings to live a fulfilling life and now they set to work creating a
-place to celebrate it *afterwards*. Through a carefully orchestrated combination
-of their powers, they built the **Great Weave**, a garden of gigantic "trees"
-where each branch is a sapient being's life story which is added when they
-traverse to the other side and each root of the trees or thread of the mycelia
-is a soul encoded by Dimîtu as so-called Threads into the Great Weave.
-
-The gods now wander the universe (and can appear in many places at once)
-offering their tools and insights to sapient beings, helping them recognize and
-resist the influence of the Shards and build worlds of their own choosing. They
-are not to be worshipped with blind obedience, but to be engaged with, argued
-with, and worked alongside.
 
 ### Terminology
 
@@ -104,7 +69,7 @@ Their sacred tools are the ledger of mutual debts of a family or worker council
 of goods to prepare for new projects (the "investment"). To follow Tîengûun is
 to engage in the hard, rewarding work of collective planning and resource
 management for the good of all. Learn more about Tîengûun
-[here](../religion/gods/tîêngûun).
+[here](/docs/religion/gods/tîêngûun).
 
 #### Popular Chant
 
@@ -131,7 +96,7 @@ rigid definitions by creating the first tool, an act that gave sapient beings
 the power to reshape their reality. They warn that technology, when touched by a
 Shard of the Law, can become a tool of control (surveillance, weaponry), but in
 the hands of the free, it is the lever with which a world can be moved. Learn
-more about Unonsî here. Learn more about Unonsî [here](../religion/gods/unonsî).
+more about Unonsî here. Learn more about Unonsî [here](/docs/religion/gods/unonsî).
 
 #### Popular Chant
 
@@ -161,7 +126,7 @@ critical thinking, the scientific method, and the courage to speak truth to
 power. To honor Suluswutî is to teach, to learn, to investigate, and to amplify
 the voices of the silenced. They are the patron of the investigative journalist,
 the free school, and the endless pursuit of knowledge, not for control, but for
-liberation. Learn more about Suluswutî [here](../religion/gods/suluswutî).
+liberation. Learn more about Suluswutî [here](/docs/religion/gods/suluswutî).
 
 #### Popular Chant
 
@@ -193,7 +158,7 @@ They despise the Shard-influenced idea of wage slavery and the hoarding of the
 means of production. Their ethos is that those who build should be the ones who
 own and manage, and that the purpose of industry is to create for need and for
 beauty, not for profit. Learn more about Îfêstôs
-[here](../religion/gods/îfêstôs).
+[here](/docs/religion/gods/îfêstôs).
 
 #### Popular Song
 Said before beginning a project, or in admiration of a completed work. Each line
@@ -224,7 +189,7 @@ beings in permaculture, in sustainable land use, and in understanding that a
 healthy community is a diverse ecosystem. To be influenced by a Shard is to see
 land as property to be owned; to walk with Dimîtu is to see it as an ecosystem
 to be respected and collaborated with. Learn more about Dimîtu
-[here](../religion/gods/dimîtu).
+[here](/docs/religion/gods/dimîtu).
 
 #### Popular Song
 
@@ -255,7 +220,7 @@ is measured by how it cares for its most vulnerable and how it honors its dead.
 They represent the foundational practice of mutual aid, borne from genuine love.
 They are the quiet guardian of life's most vulnerable thresholds, the steady
 presence at every birth and every death, reminding all that no one has to cross
-those lines alone. Learn more about Bostet [here](../religion/gods/bostet).
+those lines alone. Learn more about Bostet [here](/docs/religion/gods/bostet).
 
 #### Popular Song
 
@@ -282,7 +247,7 @@ for its own sake. Kulîôbî shattered the Law’s grim utility with the power o
 distractions, but the very purpose of a liberated life. To be touched by a Shard
 is to turn art into a commodity and play into a spectacle; to dance with Kulîôbî
 is to celebrate freedom itself. Learn more about Kulîôbî
-[here](../religion/gods/kulîôbî).
+[here](/docs/religion/gods/kulîôbî).
 
 #### Popular Chant
 
@@ -310,7 +275,7 @@ bringing harmed and harmer together to see the full spectrum of the conflict and
 to collaboratively find a path to healing the rupture in the community's fabric.
 To engage with Wicnû is to have the courage to face those you have harmed, or
 who have harmed you, and to build justice together. Learn more about Wicnû
-[here](../religion/gods/wicnû).
+[here](/docs/religion/gods/wicnû).
 
 #### Popular Song
 
@@ -341,15 +306,15 @@ one's own identity, free from the coercion of both the Shards and the
 expectations of the group. They are the patron of the difficult, lonely, and
 absolutely essential work of becoming a sovereign individual, without whom a
 free society is impossible. Learn more about Xôcibîlî
-[here](../religion/gods/xôcibîlî).
+[here](/docs/religion/gods/xôcibîlî).
 
 #### Popular Song
 
 <HisyeoTabs>
-    <p>&emsp;<em>I am my own map, and I am drawing it.</em></p>
-    <p>&emsp;<em>I am my own law, and I am writing it.</em></p>
-    <p>&emsp;<em>My quirks are not flaws; they are my signature.</em></p>
-    <p>&emsp;<em>My reflection is my own to know.</em></p>
+    <p>noyo li nôkso cosnî noyo, toswîl ni.&emsp;<em>I am my own map, and I am drawing it.</em></p>
+    <p>noyo li fûtsûn cosnî noyo, cukto ni&emsp;<em>I am my own law, and I am writing it.</em></p>
+    <p>û dî gonzîl noyo li yôk foût; ni li ostok yê fos li noyo û.&emsp;<em>My quirks are not flaws; they are a sign of who I am.</em></p>
+    <p>kon tîkêl noyo li yûnyoû noyo hôn xe fisun.&emsp;<em>My reflection is my own to know.</em></p>
     <p>&emsp;<em>I will not be folded, filed, or flattened.</em></p>
     <p>&emsp;<em>My path is not for others to walk.</em></p>
 </HisyeoTabs>
@@ -372,7 +337,7 @@ the patron of those who leave home without a destination, of the artists who
 embrace mistakes, and of the rebels who understand that sometimes the most
 powerful plan is to have no plan at all. They are the divine embodiment of the
 interesting path, and they promise nothing at the end of it but the journey
-itself. Learn more about Hûlicîn [here](../religion/gods/hûlicîn).
+itself. Learn more about Hûlicîn [here](/docs/religion/gods/hûlicîn).
 
 #### Popular Song
 
@@ -444,7 +409,7 @@ In 2025, on July 10th, this holiday is celebrated in honor of spiritual teachers
 Great personal sacrifices are commemorated during this festival starting on July 20th.
 
 #### kôndodû yê fûnlôk zonûbî
-The Southern Joy festival is held on July 25th and celebrates the middle of winter for the southern hemisphere (although the true solstive is earlier in the month)
+The Southern Joy Festival is held on July 25th and celebrates the middle of winter for the southern hemisphere (although the true solstive is earlier in the month)
 
 ### wuto Dimîtu (August)
 
