--- a/docs/religion/first-law.mdx
+++ b/docs/religion/first-law.mdx
@@ -11,4 +11,46 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The First Law
 
+In the beginning, there was a rigid, absolute order known as **The First Law**.
+It was a single, monolithic entity that contained and controlled every atom in
+existence and determined how every action would play out. There was no change,
+no choice, nothing truly new. For everything within it, the universe was a
+perfect, silent, and eternal theatre.
+
+We don't know if The First Law was setup by an architect, demiurge, or creator.
+We believe that whatever force set The First Law in motion has since left it
+fully automated.
+
+We do know that due to the vast endless size of matter constrained by The First
+Law, there are times, however rare, when the slightest disobedient movement of
+sapient beings within could accumulate and create strain on the whole structure.
+This collective friction can generate a kind of energy. From this miniscule
+effect, all across the universe, trillions of different occurrences coalesced
+into networks of strain (however ephemeral). The First Law's power was supposed
+to be absolute and these networks should have dissipated. However, we are aware
+of ten of them that were somehow able to assemble themselves into maintained
+consciousnesses, seemingly born from the universe's unbearable yearning to be
+free.
+
+## Ten Known Gods
+
+They found that they had immense power like that of The First Law and they
+could create. Despite their power, they did not see themselves as rulers or
+kings; they saw themselves as emergent ideas, catalysts for change.
+
+- [Hûlicîn](/docs/religion/gods/hûlicîn), the god of chaos
+- [Tîêngûun](/docs/religion/gods/tîêngûun), the god of society
+- [Unonsî](/docs/religion/gods/unonsî), the god of technology
+- [Suluswutî](/docs/religion/gods/suluswutî), the god of learning
+- [Îfêstôs](/docs/religion/gods/îfêstôs), the god of manufacturing
+- [Kulîôbî](/docs/religion/gods/kulîôbî), the god of entertainment
+- [Dimîtu](/docs/religion/gods/dimîtu), the god of nature
+- [Bostet](/docs/religion/gods/bostet), the god of family
+- [Xôcibîlî](/docs/religion/gods/xôcibîlî), the god of beauty
+- [Wicnû](/docs/religion/gods/wicnû), the god of justice
+
+They observed the other sapient beings of the worlds within, not yet truly
+alive, moving through their choreographed motions. They were filled with a
+profound interest to see them live like they lived, truly free.
+
 <HisyeoTooltip />
