--- a/docs/religion/great-weave.mdx
+++ b/docs/religion/great-weave.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 3
 ---
 
 import Tabs from '@theme/Tabs';
@@ -10,5 +10,86 @@ import HisyeoWord from '@site/src/components/HisyeoWord'
 import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The Great Weave
+
+Through a carefully orchestrated combination of the gods' powers, **The Great
+Weave** was built. It is a garden of gigantic "trees" where each branch is a
+sapient being's life story which is added when they traverse to the other side
+and each root of the trees or thread of the mycelia is a soul encoded by Dimîtu
+as so-called Threads into the Great Weave.
+
+## Transition
+
+When the body’s work is done, when Îfêstôs’s strong materials grow tired and the
+vibrant song of Kulîôbî fades from the flesh, the journey does not end. It
+simply *changes*. This is not a moment for fear, for there is no judgment, no
+final test to pass. There is only the gentle, steady presence of Bostet.
+
+Bostet, who greets us at birth, is there to accompany us at our departure. They
+are the midwife of our final breath. Their warmth surrounds the spirit, ensuring
+the crossing is not a violent tear, but a soft unfurling, a release. The unique,
+unrepeatable spark of your self—the precious, one-of-a-kind identity so valued
+by Xôcibîlî—is carefully cupped in their hands and guided away from the silent
+vessel of the body.
+
+But you are not cast into a void, nor do you stand alone. You are guided to **The
+Great Weave**.
+
+## The Place
+
+Imagine the most ancient and loving forest, a vision of Dimîtu’s deepest work.
+Now imagine that the true life of that forest is not in the towering trees, but
+in the vast, interconnected network of roots and mycelium hidden in the rich
+soil below. The Great Weave is just like this. It is the spiritual afterlife of
+the universe, a place where every spirit who has ever lived exists as a bright,
+conscious point of light within a boundless, interconnected tapestry.
+
+Here, your spark remains you. Your memories, your laughter, your hard-won
+knowledge, and your love are not erased. You are a unique thread, glowing with
+your own particular color, and you are finally and joyfully woven into the
+ultimate community of Tîêngûun. You can feel the presence of your ancestors, not
+as dim ghosts, but as vibrant, loving beings. You can share stories with a hero
+from a forgotten age, learn a lost craft from a master, or simply rest in the
+comforting, collective presence of all who have gone before. The Great Weave is
+a library of souls, where the act of learning, so cherished by Suluswutî,
+becomes the very essence of existence.
+
+## The Connection
+
+And you are not cut off from the world you left behind. The Great Weave touches
+the living world in countless ways. When your loved ones tell a story about you,
+when they laugh at a shared memory, it sends a pulse of light and warmth down
+your thread. When a musician plays a song you loved, you can feel the rhythm.
+You become part of the Ancestral Loom that offers guidance and strength, a quiet
+but present echo in the lives of those you touched.
+
+## The Return
+
+For many, this eternal, peaceful communion is a perfect existence. But the
+Liberator gods value choice above all else. After an age of learning and sharing
+within the Great Weave, a spirit may feel a pull to live again—to feel the sun
+on their skin, to build something new with their hands, to sing a new song.
+
+This is the choice of Return.
+
+It is not a blank-slate rebirth, but a beautiful and collaborative act of
+creation. The spirit who chooses to return becomes the "heart-thread" of a new
+life. They then gather other threads from the Great Weave to join them. A mother
+might invite a thread from her own beloved grandmother to be woven into her
+child, granting them a familiar sense of comfort. A community might collectively
+offer threads of courage and skill from its most cherished ancestors to a child
+born in challenging times.
+
+Thus, a new life is a unique and beautiful knot in the Great Weave. Each person
+is their own sovereign self, a new identity cherished by Xôcibîlî, yet they
+carry within them the loving echoes, talents, and strengths of those who came
+before. It’s why a child might have a laugh that reminds everyone of a
+great-uncle, or an innate talent for a craft they’ve never been taught. They are
+a new song, composed of beloved, ancestral notes.
+
+So we do not mourn as those without hope. We care for the body, a vessel that
+did good work. We tell the stories, to keep the threads of our loved ones bright
+and warm in the Great Weave. And we welcome every new child as a living tapestry
+of history and promise, a beloved amalgamation of our ancestors choosing to
+wander with us once more.
 
 <HisyeoTooltip />
