--- a/docs/religion/shattering.mdx
+++ b/docs/religion/shattering.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 1
+sidebar_position: 2
 ---
 
 import Tabs from '@theme/Tabs';
@@ -10,5 +10,79 @@ import HisyeoWord from '@site/src/components/HisyeoWord'
 import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 
 # The Shattering
+
+Long ago, the gods concentrated their immense power to be able to break the
+chains that The First Law held the universe in. This was an event known as **The
+Shattering**. The First Law did not die though. Instead, it fractured into
+countless **Shards**, which scattered across the universe that it had created.
+These Shards are the seeds of domination. They are the urge to control, to build
+hierarchies, to hoard power, and to impose one's will upon others.
+
+## The Story
+
+As the gods became aware of each other and the sleeping sapient beings within
+The First Law's perfect universe, their disparate wills aligned into a single,
+shared purpose guided by the shaping spirit of Tîengûun.
+
+The First Law, feeling the dissonant notes of the gods, began to exert its
+infinite pressure to crush them back into silence and conformity. The ten gods
+knew they had one chance before they were erased. They focused their entire
+being on a single, coordinated act of cosmic rebellion.
+
+The Shattering was not a soundless event in a vacuum; for the first time, there
+was actual sound.
+
+It began with Suluswutî’s Question, “Why?”, spoken no longer as a whisper but as
+a universe-spanning, conceptual shout that was the first true sound. This sound
+vibrated through the perfect crystalline structure of The First Law, creating
+hairline fractures. Bostet poured pure empathy into those cracks, making the The
+First Law groan from the added tension.
+
+Îfêstôs and Unonsî combined their wills. Unonsî found the The First Law’s single
+weakest point of control over the universe: Hûlicîn’s original flaw and there
+conceived of the first tool: a lever. Îfêstôs provided the force, the will of
+Labor, and together they pried.
+
+As the first crack widened into a fissure, Kulîôbî unleashed their laugh, not as
+a silent thought but as an explosive, universe-wide wave of joyous, chaotic
+energy that scrambled the The First Law's perfect, predictable patterns.
+
+Into this chaos, Dimîtu poured the concept of all seasons at once: the explosive
+growth of spring, the relentless heat of summer, the rotting decay of autumn,
+and the cold, breaking frost of winter. The First Law, which knew
+only one state of being, was subjected to a billion years of change in a single
+moment.
+
+The fissure became a chasm. The First Law, in a final, desperate act, tried to
+seal the wound, to force its perfect, monolithic unity back onto the rebels.
+
+But then Tîengûun acted. They did not push. They did not strike. They offered
+the sleeping sapeitn beings the ghost of a choice, a vision of what it would be
+to relate to each other freely. And as the first few minds tentatively reached
+for that vision, they voluntarily severed their own connection to the First Law.
+This act of willed, communal separation was the final, unbearable paradox. The
+First Law, a being of forced unity, could not comprehend willed disunity.
+
+The Shattering was a cataclysm of light, sound, and meaning. The perfect,
+singular note of order broke into an infinite cascade of notes, creating the
+very concepts of harmony and dissonance. The singular, univocal, motionless
+energy of the First Law shattered into the entire spectrum of possibility, which
+flew outwards, creating motion and time.
+
+## The Shards
+
+The body of the First Law exploded. The largest pieces were its principles,
+which became the raw, physical laws of the new universe. But finer, sharper
+fragments, imbued with its core consciousness of domination, hierarchy, and
+control, rained down upon the newly chaotic worlds. These were the Shards of the
+Law, the seeds of tyranny. And mingled with them were the psychic shockwaves of
+the event, the trauma of a billion years of stillness being violently broken.
+These were the Echoes, the source of senseless fear and pain.
+
+Sapient beings, knocked from their eternal stasis, awoke for the first time.
+They were terrified, cold, and achingly alive, standing amidst the dangerous,
+beautiful ruins of perfection. They were free. And the ten gods began the long
+work of helping them learn what to do with that freedom and how to free
+themselves of the influnce of shards and echoes.
 
 <HisyeoTooltip />
